--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "public/reveal"]
-	path = public/reveal
+[submodule "reveal"]
+	path = reveal
 	url = git@github.com:hakimel/reveal.js.git
